--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "express": "^4.15.2"
   },
   "devDependencies": {
-    "request": "^2.81.0",
-    "tape": "^4.7.0",
+    "chai": "^4.2.0",
     "mocha": "^7.0.1",
-    "supertest": "0.13.0"
+    "request": "^2.81.0",
+    "supertest": "0.13.0",
+    "tape": "^4.7.0"
   },
   "repository": {
     "type": "git",
