--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "mocha 'tests/tests.js'"
+    "test": "nyc mocha 'tests/tests.js'"
   },
   "dependencies": {
     "ejs": "^2.5.6",
@@ -16,7 +16,9 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "istanbul": "^0.4.5",
     "mocha": "^7.0.1",
+    "nyc": "^15.0.0",
     "request": "^2.81.0",
     "supertest": "0.13.0",
     "tape": "^4.7.0"
